# dagster-evidence-example

./: CLAUDE.md  README.md  index.html  manifest.webmanifest
_app/: version.json
_app/immutable/assets/: 0.sqb3p6mO.css  _layout.BDiVzOwk.css
dagster-evidence-example/: README.md  pyproject.toml
dagster-evidence-example/src/dagster_evidence_example/defs/: orders_asset.py
dagster-evidence-example/src/dagster_evidence_example/defs/dagster_evidence_github_pages/: defs.yaml
dagster-evidence-example/src/dagster_evidence_example/defs/dbt_project/: defs.yaml
dagster-evidence-example/src/dbt_evidence_example/: .user.yml  dbt_project.yml  profiles.yml
dagster-evidence-example/src/dbt_evidence_example/models/: dim_example_users.sql  fct_example_metrics.sql  fct_example_orders.sql
dagster-evidence-example/src/evidence_project/: evidence.config.yaml  package-lock.json  package.json
dagster-evidence-example/src/evidence_project/.evidence/customization/: .profile.json
dagster-evidence-example/src/evidence_project/sources/dbt_analytics_source/: connection.yaml  metrics.sql  orders.sql  orders_with_users.sql
dagster-evidence-example/src/evidence_project/sources/dbt_users_source_hidden/: connection.yaml  users.sql
dagster-evidence-example/src/evidence_project/sources/gsheet_source/: connection.yaml
dagster-evidence-example/src/evidence_project/sources/motherduck_source/: connection.yaml  query_1.sql
dagster-evidence-example/src/evidence_project/sources/needful_things/: connection.yaml  needful_things.duckdb
data/: manifest.json
(+24 files in other folders)
