[project]
name = "dagster_evidence_example"
requires-python = ">=3.10,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.12.10",
    "dagster-evidence",
]

[tool.uv.sources]
dagster-evidence = { path = "/Users/milicevica23/git/open-source/community-integrations/libraries/dagster-evidence", editable = true }

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_evidence_example"
registry_modules = [
    "dagster_evidence_example.components.*","dagster_evidence.components.evidence_project_v2.*"
]


